--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -177,7 +177,7 @@
                     {% endif %}
                 </table>
                 <div style="height: 10px;"></div>
-                    <a href="/hospital/update-beds/occupied" class="btn btn-all"
+                    <a href="/hospital/dashboard/emergency-doctors?user_id={{ user.id }}" class="btn btn-all"
                         style="background-color: rgba(17, 145, 191, 1);">
                         Update
                     </a>
