--- a/templates/home.html
+++ b/templates/home.html
@@ -252,6 +252,9 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+
+            flex-wrap: wrap;          /* allows wrapping on small screens */
+            gap: 10px;
         }
 
         .top-border h1 {
@@ -269,6 +272,7 @@
         .btn-group {
             display: flex;
             gap: 10px;
+            flex-wrap: wrap;
         }
         .btn-all {
             background-color: black;
