--- a/templates/emergency.html
+++ b/templates/emergency.html
@@ -12,6 +12,8 @@
 
         .login {
             display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
             justify-content: center;
             align-items: center;
             height: auto;
@@ -86,6 +88,8 @@
 
             /* layout */
             display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
             align-items: center;
             justify-content: space-between;
         }
@@ -104,6 +108,7 @@
         }
         .btn-group {
             display: flex;
+            flex-wrap: wrap;
             gap: 10px;
         }
 
