--- a/templates/emergency_rec.html
+++ b/templates/emergency_rec.html
@@ -16,6 +16,8 @@
             align-items: center;
             height: auto;
             background-color: #f0f2f5;
+            flex-wrap: wrap;
+            gap: 10px;
         }
 
         .login-card {
@@ -86,6 +88,8 @@
 
             /* layout */
             display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
             align-items: center;
             justify-content: space-between;
         }
@@ -104,6 +108,7 @@
         }
         .btn-group {
             display: flex;
+            flex-wrap: wrap;
             gap: 10px;
         }
 
